# Mesh-Viewer

./: CMakeLists.txt
header/: Edge.h  HalfEdge.h  Material.hpp  Mesh.hpp  MeshTriangle.h  Scene.hpp  Shader.hpp  Texture.hpp  Vertex.h  Window.hpp
header/Mesh/: Edge.h  HalfEdge.h  Mesh.hpp  MeshTriangle.h  Vertex.h
src/: Camera.cpp  Camera.hpp  Edge.cpp  HalfEdge.cpp  Material.cpp  Mesh.cpp  Mesh.hpp  MeshTriangle.cpp  Scene.cpp  Scene.hpp  Shader.cpp  Texture.cpp  Texture.hpp  Vertex.cpp  Window.cpp  main.cpp
src/Mesh/: Edge.cpp  HalfEdge.cpp  Mesh.cpp  MeshTriangle.cpp  Vertex.cpp
